--- a/src/view/Container.css
+++ b/src/view/Container.css
@@ -5,3 +5,27 @@
 	border-radius: 50%;
 	font-size: 1.8rem;
 }
+.emty {
+	background-color: #4a90e2;
+	height: 50vh;
+	border-radius: 2rem;
+}
+.container {
+	height: 100vh;
+}
+.btn-modal {
+	box-shadow: 0px 0px 8px 0px black;
+	background-color: #e2e8f0;
+	color: black;
+}
+.card {
+	background-color: #4a90e2;
+	color: #e2e8f0;
+}
+.card button {
+	background-color: #1a202c;
+	color: #e2e8f0;
+}
+.modal-title {
+	color: black;
+}
